RTCEth/Import Declarations/Delphi/RTC4ethImport.pas

procedure n_set_ext_start_delay(n: word; delay: smallint; encoder: smallint); stdcall; external RTC4ethDLL;
procedure set_ext_start_delay(delay: smallint; encoder: smallint); stdcall; external RTC4ethDLL;
procedure n_home_position(n: word; xhome: smallint; yhome: smallint); stdcall; external RTC4ethDLL;
procedure home_position(xhome: smallint; yhome: smallint); stdcall; external RTC4ethDLL;
procedure n_set_rot_center(n: word; center_x: longint; center_y: longint); stdcall; external RTC4ethDLL;
procedure set_rot_center(center_x: longint; center_y: longint); stdcall; external RTC4ethDLL;
procedure n_dsp_start(n: word); stdcall; external RTC4ethDLL;
procedure dsp_start; stdcall; external RTC4ethDLL;
procedure n_write_da_x(n: word; x: word; value: word); stdcall; external RTC4ethDLL;
procedure write_da_x(x: word; value: word); stdcall; external RTC4ethDLL;
function  n_read_ad_x(n: word; x: word): word; stdcall; external RTC4ethDLL;
function  read_ad_x(x: word): word; stdcall; external RTC4ethDLL;
function  n_read_pixel_ad(n: word; pos: word): word; stdcall; external RTC4ethDLL;
function  read_pixel_ad(pos: word): word; stdcall; external RTC4ethDLL;
function  n_get_z_distance(n: word; x: smallint; y: smallint; z: smallint): smallint; stdcall; external RTC4ethDLL;
function  get_z_distance(x: smallint; y: smallint; z: smallint): smallint; stdcall; external RTC4ethDLL;
function  n_get_io_status(n: word): word; stdcall; external RTC4ethDLL;
function  get_io_status: word; stdcall; external RTC4ethDLL;
function  load_cor(FileName: pansichar): smallint; stdcall; external RTC4ethDLL;
function  load_pro(FileName: pansichar): smallint; stdcall; external RTC4ethDLL;
function  n_get_serial_number(n: word): word; stdcall; external RTC4ethDLL;
function  get_serial_number: word; stdcall; external RTC4ethDLL;
function  n_get_serial_number_32(n: word): longint; stdcall; external RTC4ethDLL;
function  get_serial_number_32: longint; stdcall; external RTC4ethDLL;
function  n_get_rtc_version(n: word): word; stdcall; external RTC4ethDLL;
function  get_rtc_version: word; stdcall; external RTC4ethDLL;
function  n_auto_cal(n: word; Head: word; command: word): Smallint; stdcall; external RTC4ethDLL;
function  auto_cal(Head: word; command: word): Smallint; stdcall; external RTC4ethDLL;
procedure n_set_hi(n: word; GalvoGainX: double; GalvoGainY: double; GalvoOffsetX: smallint; GalvoOffsetY: smallint; Head: smallint); stdcall; external RTC4ethDLL;
procedure set_hi(GalvoGainX: double; GalvoGainY: double; GalvoOffsetX: smallint; GalvoOffsetY: smallint; Head: smallint); stdcall; external RTC4ethDLL;
procedure n_set_list_mode(n: word; mode: word); stdcall; external RTC4ethDLL;
procedure set_list_mode(mode: word); stdcall; external RTC4ethDLL;
function  n_get_list_space(n: word): word; stdcall; external RTC4ethDLL;
function  get_list_space: word; stdcall; external RTC4ethDLL;
procedure n_save_and_restart_timer(n: word); stdcall; external RTC4ethDLL;
procedure save_and_restart_timer; stdcall; external RTC4ethDLL;
procedure n_set_ext_start_delay_list(n: word; delay: smallint; encoder: smallint); stdcall; external RTC4ethDLL;
procedure set_ext_start_delay_list(delay: smallint; encoder: smallint); stdcall; external RTC4ethDLL;
function  n_get_time(n: word): double; stdcall; external RTC4ethDLL;
function  get_time: double; stdcall; external RTC4ethDLL;
procedure get_hi_data(var x1: word; var x2: word; var y1: word; var y2: word); stdcall; external RTC4ethDLL;
function  teachin(FileName: pansichar; Xin: smallint; Yin: smallint; Zin: smallint; LL0: double; var Xout: smallint; var Yout: smallint; var Zout: smallint): SmallInt; stdcall; external RTC4ethDLL;
function  getmemory(adr: word): smallint; stdcall; external RTC4ethDLL;
procedure set_timeout(timeout: dword); stdcall; external RTC4ethDLL;
procedure set_timeouts(acquire_timeout_us: dword; acquire_max_retries: dword; send_recv_timeout_us: dword; send_recv_max_retries: dword; acqu_rel_min_intvl_ms: dword); stdcall; external RTC4ethDLL;
procedure get_timeouts(var acquire_timeout_us: dword; var acquire_max_retries: dword; var send_recv_timeout_us: dword; var send_recv_max_retries: dword; var acqu_rel_min_intvl_ms: dword); stdcall; external RTC4ethDLL;
function  rs232_config(baudrate: dword; parity: dword; stopbits: dword): dword; stdcall; external RTC4ethDLL;
function  n_rs232_config(n: word; baudrate: dword; parity: dword; stopbits: dword): dword; stdcall; external RTC4ethDLL;
function  rs232_write_data(data: dword): dword; stdcall; external RTC4ethDLL;
function  n_rs232_write_data(n: word; data: dword): dword; stdcall; external RTC4ethDLL;
function  rs232_write_text(text: pansichar): dword; stdcall; external RTC4ethDLL;
function  n_rs232_write_text(n: word; text: pansichar): dword; stdcall; external RTC4ethDLL;
function  rs232_read_data(var data: dword): dword; stdcall; external RTC4ethDLL;
function  n_rs232_read_data(n: word; var data: dword): dword; stdcall; external RTC4ethDLL;
procedure n_eth_set_com_timeouts_auto(cardNo: word; initial_timeout_ms: double; sum_timeout_ms: double; multiplicator: double; mode: longint); stdcall; external RTC4ethDLL;
procedure eth_set_com_timeouts_auto(initial_timeout_ms: double; sum_timeout_ms: double; multiplicator: double; mode: longint); stdcall; external RTC4ethDLL;
procedure n_eth_get_com_timeouts_auto(cardNo: word; var initial_timeout_ms: double; var sum_timeout_ms: double; var multiplicator: double; var mode: longint); stdcall; external RTC4ethDLL;
procedure eth_get_com_timeouts_auto(var initial_timeout_ms: double; var sum_timeout_ms: double; var multiplicator: double; var mode: longint); stdcall; external RTC4ethDLL;
function  n_eth_watchdog_timer_config(n: word; timer_ms: dword): dword; stdcall; external RTC4ethDLL;
function  eth_watchdog_timer_config(timer_ms: dword): dword; stdcall; external RTC4ethDLL;
function  n_eth_watchdog_timer_reset(n: word): dword; stdcall; external RTC4ethDLL;
function  eth_watchdog_timer_reset: dword; stdcall; external RTC4ethDLL;
procedure n_eth_link_loss_config(n: word; mode: dword); stdcall; external RTC4ethDLL;
procedure eth_link_loss_config(mode: dword); stdcall; external RTC4ethDLL;
function  n_eth_get_last_error(n: word): dword; stdcall; external RTC4ethDLL;
function  eth_get_last_error: dword; stdcall; external RTC4ethDLL;
function  n_eth_get_error(n: word): dword; stdcall; external RTC4ethDLL;
function  eth_get_error: dword; stdcall; external RTC4ethDLL;
function  n_eth_error_dump(n: word; dump: pdword): dword; stdcall; external RTC4ethDLL;
function  eth_error_dump(dump: pdword): dword; stdcall; external RTC4ethDLL;

implementation

end.
